axonius-assessment/force-app/main/default/objects/Account/fields/Total_Birds__c.field-meta.xml
<CustomField>
    <fullName>Total_Birds__c</fullName>
    <label>Total Birds</label>
    <summaryFilterItems>
        <field>Pet__c.Species__c</field>
        <operation>equals</operation>
        <value>Bird</value>
    </summaryFilterItems>
    <summaryForeignKey>Pet__c.Veterinarian__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>