axonius-assessment/force-app/main/default/objects/Account/fields/Total_Pets__c.field-meta.xml
<CustomField>
    <fullName>Total_Pets__c</fullName>
    <label>Total Pets</label>
    <summaryForeignKey>Pet__c.Veterinarian__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>