axonius-assessment/force-app/main/default/objects/Account/fields/Total_Training_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Training_Sessions__c</fullName>
    <label>Total Training Sessions</label>
    <summaryForeignKey>Training_Sessions__c.Veterinarian__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>